# MagicWand

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
docs/: MPU selection criteria.docx  Model Training Instructions.docx  Performance Tuning for OMGS3.docx  🪄 Magic Wand Maker Project.docx
main/: CMakeLists.txt  data_capture_task.cpp  data_capture_task.h  data_types.h  fusion_task.cpp  fusion_task.h  gesture_task.cpp  gesture_task.h  ha_task.cpp  ha_task.h  idf_component.yml  imu_provider.cpp  imu_provider.h  imu_task.cpp  imu_task.h  inference_task.cpp  inference_task.h  magic_wand.yaml  main.cpp  model.cpp  model.h  queues.cpp  queues.h
test_data/: CMakeLists.txt
training/: realtime_trajectory_visualizer.py  scatter.py  train_trajectory_model.py  training_script.py  visualize_trajectories.py
training/edgeimpulse/: CMakeLists.txt  partitions.csv  sdkconfig
training/edgeimpulse/main/: CMakeLists.txt  edgeimpulse.c  idf_component.yml
